// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fe-arrow-left icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <line
    x1="19"
    x2="5"
    y1="12"
    y2="12"
  />
  <polyline
    points="12 19 5 12 12 5"
  />
</svg>
`;

exports[`fe-chevron-down icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <polyline
    points="6 9 12 15 18 9"
  />
</svg>
`;

exports[`fe-cloud icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M18 10h-1.26A8 8 0 1 0 9 20h9a5 5 0 0 0 0-10z"
  />
</svg>
`;

exports[`fe-copy icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    height="13"
    rx="2"
    ry="2"
    width="13"
    x="9"
    y="9"
  />
  <path
    d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
  />
</svg>
`;

exports[`fe-edit icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
  />
  <path
    d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
  />
</svg>
`;

exports[`fe-external-link icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
  />
  <polyline
    points="15 3 21 3 21 9"
  />
  <line
    x1="10"
    x2="21"
    y1="14"
    y2="3"
  />
</svg>
`;

exports[`fe-filter icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <polygon
    points="22 3 2 3 10 12.46 10 19 14 21 14 12.46 22 3"
  />
</svg>
`;

exports[`fe-github icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
  />
</svg>
`;

exports[`fe-link-2 icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M15 7h3a5 5 0 0 1 5 5 5 5 0 0 1-5 5h-3m-6 0H6a5 5 0 0 1-5-5 5 5 0 0 1 5-5h3"
  />
  <line
    x1="8"
    x2="16"
    y1="12"
    y2="12"
  />
</svg>
`;

exports[`fe-loader icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <line
    x1="12"
    x2="12"
    y1="2"
    y2="6"
  />
  <line
    x1="12"
    x2="12"
    y1="18"
    y2="22"
  />
  <line
    x1="4.93"
    x2="7.76"
    y1="4.93"
    y2="7.76"
  />
  <line
    x1="16.24"
    x2="19.07"
    y1="16.24"
    y2="19.07"
  />
  <line
    x1="2"
    x2="6"
    y1="12"
    y2="12"
  />
  <line
    x1="18"
    x2="22"
    y1="12"
    y2="12"
  />
  <line
    x1="4.93"
    x2="7.76"
    y1="19.07"
    y2="16.24"
  />
  <line
    x1="16.24"
    x2="19.07"
    y1="7.76"
    y2="4.93"
  />
</svg>
`;

exports[`fe-log-in icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"
  />
  <polyline
    points="10 17 15 12 10 7"
  />
  <line
    x1="15"
    x2="3"
    y1="12"
    y2="12"
  />
</svg>
`;

exports[`fe-moon icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"
  />
</svg>
`;

exports[`fe-pen icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M12 19l7-7 3 3-7 7-3-3z"
  />
  <path
    d="M18 13l-1.5-7.5L2 2l3.5 14.5L13 18l5-5z"
  />
  <path
    d="M2 2l7.586 7.586"
  />
  <circle
    cx="11"
    cy="11"
    r="2"
  />
</svg>
`;

exports[`fe-search icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="11"
    cy="11"
    r="8"
  />
  <line
    x1="21"
    x2="16.65"
    y1="21"
    y2="16.65"
  />
</svg>
`;

exports[`fe-sun icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="12"
    cy="12"
    r="5"
  />
  <line
    x1="12"
    x2="12"
    y1="1"
    y2="3"
  />
  <line
    x1="12"
    x2="12"
    y1="21"
    y2="23"
  />
  <line
    x1="4.22"
    x2="5.64"
    y1="4.22"
    y2="5.64"
  />
  <line
    x1="18.36"
    x2="19.78"
    y1="18.36"
    y2="19.78"
  />
  <line
    x1="1"
    x2="3"
    y1="12"
    y2="12"
  />
  <line
    x1="21"
    x2="23"
    y1="12"
    y2="12"
  />
  <line
    x1="4.22"
    x2="5.64"
    y1="19.78"
    y2="18.36"
  />
  <line
    x1="18.36"
    x2="19.78"
    y1="5.64"
    y2="4.22"
  />
</svg>
`;

exports[`fe-thumbsdown icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M10 15v4a3 3 0 0 0 3 3l4-9V2H5.72a2 2 0 0 0-2 1.7l-1.38 9a2 2 0 0 0 2 2.3zm7-13h2.67A2.31 2.31 0 0 1 22 4v7a2.31 2.31 0 0 1-2.33 2H17"
  />
</svg>
`;

exports[`fe-thumbsup icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M14 9V5a3 3 0 0 0-3-3l-4 9v11h11.28a2 2 0 0 0 2-1.7l1.38-9a2 2 0 0 0-2-2.3zM7 22H4a2 2 0 0 1-2-2v-7a2 2 0 0 1 2-2h3"
  />
</svg>
`;

exports[`fe-x icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <line
    x1="18"
    x2="6"
    y1="6"
    y2="18"
  />
  <line
    x1="6"
    x2="18"
    y1="6"
    y2="18"
  />
</svg>
`;

exports[`logo-android icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  --primary-color: black;
  --accent-color: white;
}

.dark-mode .emotion-0 {
  --primary-color: white;
  --accent-color: black;
}

<svg
  className="emotion-0"
  viewBox="-147 -70 294 345"
  xmlns="http://www.w3.org/2000/svg"
  xmlnsXlink="http://www.w3.org/1999/xlink"
>
  <g
    fill="var(--primary-color)"
  >
    <use
      stroke="var(--accent-color)"
      strokeWidth="14.4"
      xlinkHref="#a"
    />
    <use
      transform="scale(-1 1)"
      xlinkHref="#b"
    />
    <g
      id="b"
      stroke="var(--accent-color)"
      strokeWidth="7.2"
    >
      <rect
        height="86"
        rx="6.5"
        transform="rotate(29)"
        width="13"
        x="14"
        y="-86"
      />
      <rect
        height="133"
        id="c"
        rx="24"
        width="48"
        x="-143"
        y="41"
      />
      <use
        x="85"
        xlinkHref="#c"
        y="97"
      />
    </g>
    <g
      id="a"
    >
      <ellipse
        cy="41"
        rx="91"
        ry="84"
      />
      <rect
        height="182"
        rx="22"
        width="182"
        x="-91"
        y="20"
      />
    </g>
  </g>
  <g
    fill="var(--accent-color)"
    stroke="var(--accent-color)"
    strokeWidth="7.2"
  >
    <path
      d="M-95 44.5H95"
    />
    <circle
      cx="-42"
      r="4"
    />
    <circle
      cx="42"
      r="4"
    />
  </g>
</svg>
`;

exports[`logo-apple icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: black;
}

.dark-mode .emotion-0 {
  fill: white;
}

<svg
  className="emotion-0"
  viewBox="0 0 1000 1187.198"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M979.042 925.188c-17.954 41.477-39.206 79.657-63.828 114.759-33.563 47.853-61.044 80.976-82.222 99.37-32.83 30.192-68.006 45.654-105.672 46.533-27.041 0-59.652-7.694-97.611-23.303-38.085-15.536-73.084-23.23-105.086-23.23-33.563 0-69.56 7.694-108.061 23.23-38.561 15.609-69.625 23.743-93.376 24.55-36.12 1.538-72.123-14.364-108.06-47.78-22.938-20.006-51.627-54.302-85.997-102.888-36.875-51.883-67.191-112.047-90.942-180.639C12.751 781.703 0 709.96 0 640.504c0-79.562 17.192-148.183 51.627-205.687 27.063-46.19 63.066-82.625 108.127-109.373 45.06-26.748 93.749-40.378 146.182-41.25 28.69 0 66.312 8.874 113.066 26.315 46.622 17.5 76.557 26.374 89.682 26.374 9.812 0 43.068-10.376 99.443-31.064 53.313-19.185 98.307-27.129 135.168-24 99.883 8.062 174.923 47.436 224.828 118.372-89.33 54.126-133.52 129.936-132.64 227.188.806 75.751 28.287 138.788 82.295 188.84 24.476 23.23 51.81 41.183 82.222 53.934-6.595 19.127-13.557 37.447-20.958 55.035zM749.964 23.75c0 59.374-21.692 114.81-64.928 166.122-52.176 61-115.286 96.248-183.724 90.686a184.836 184.836 0 01-1.378-22.497c0-56.999 24.813-117.998 68.878-167.874 21.999-25.253 49.978-46.25 83.907-63 33.856-16.5 65.88-25.625 95.999-27.187.88 7.937 1.246 15.875 1.246 23.75z"
  />
</svg>
`;

exports[`logo-newrelic icon matches its snapshot 1`] = `
.emotion-2 {
  width: 1em;
  height: 1em;
  fill: none;
}

.emotion-0 {
  fill: #008c99;
}

.emotion-1 {
  fill: #70ccd3;
}

<svg
  className="emotion-2"
  viewBox="0 0 18 15"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    className="emotion-0"
    d="M17.159 5.6486C16.3489 1.92142 11.8784 -0.271419 7.17568 0.751833C2.47296 1.77403 -0.682686 5.62527 0.127433 9.3514C0.937552 13.0786 5.40805 15.2714 10.1108 14.2482C14.8135 13.226 17.9691 9.37578 17.159 5.6486ZM8.64322 10.9356C6.74517 10.9356 5.20764 9.39699 5.20764 7.5C5.20764 5.603 6.74623 4.06441 8.64322 4.06441C10.5402 4.06441 12.0788 5.60194 12.0788 7.5C12.0788 9.39805 10.5402 10.9356 8.64322 10.9356Z"
  />
  <path
    className="emotion-1"
    d="M9.40328 2.69022C6.6792 2.69022 4.47046 4.89896 4.47046 7.62303C4.47046 10.3471 6.6792 12.5559 9.40328 12.5559C12.1284 12.5559 14.3372 10.3471 14.3372 7.62303C14.3361 4.89896 12.1274 2.69022 9.40328 2.69022ZM8.64299 10.5009C6.98564 10.5009 5.64216 9.15738 5.64216 7.50003C5.64216 5.84268 6.98564 4.4992 8.64299 4.4992C10.3003 4.4992 11.6438 5.84268 11.6438 7.50003C11.6438 9.15738 10.3003 10.5009 8.64299 10.5009Z"
  />
</svg>
`;

exports[`nr-ai icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  stroke: currentColor;
}

<svg
  className="emotion-0"
  viewBox="0 0 47 54"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    fill="none"
    fillRule="evenodd"
  >
    <path
      d="M11.132 10.134h4.607v6.478M8.8 41.232l3.49 2.64h3.457"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.317"
    />
    <g
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.317"
    >
      <path
        d="M23.83 3.396v45.61l-3.11 2.332-10.366-4.146-1.555-5.96-3.887-2.592-2.85-11.143 2.85-12.957 6.22-4.406.777-4.924 8.034-3.11z"
      />
      <path
        d="M23.796 3.396v45.61l3.11 2.332 10.366-4.146 1.555-5.96 3.887-2.592 2.85-11.143-2.85-12.957-6.22-4.406-.777-4.924-8.033-3.11z"
      />
    </g>
    <path
      d="M23.92 35.993h4.303l2.38 4.76M32.317 27.618h-16.23l-3.145 5.041M23.878 19.277h4.55l2.131-4.222"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.317"
    />
    <path
      d="M29.41 12.607a2.471 2.471 0 114.942 0 2.471 2.471 0 01-4.942 0"
      fill="#0AB0BF"
    />
    <path
      d="M29.41 12.607a2.471 2.471 0 114.942 0 2.471 2.471 0 01-4.942 0z"
      stroke="#0AB0BF"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.317"
    />
    <path
      d="M29.205 43.142a2.471 2.471 0 114.943 0 2.471 2.471 0 01-4.943 0"
      fill="#0AB0BF"
    />
    <path
      d="M29.205 43.142a2.471 2.471 0 114.943 0 2.471 2.471 0 01-4.943 0z"
      stroke="#0AB0BF"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.317"
    />
    <path
      d="M32.313 27.587a2.471 2.471 0 114.942 0 2.471 2.471 0 01-4.942 0"
      fill="#0AB0BF"
    />
    <path
      d="M32.313 27.587a2.471 2.471 0 114.942 0 2.471 2.471 0 01-4.942 0z"
      stroke="#0AB0BF"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.317"
    />
    <path
      d="M9.45 35.01a2.471 2.471 0 114.942 0 2.471 2.471 0 01-4.942 0"
      fill="#0AB0BF"
    />
    <path
      d="M9.45 35.01a2.471 2.471 0 114.942 0 2.471 2.471 0 01-4.942 0z"
      stroke="#0AB0BF"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.317"
    />
  </g>
</svg>
`;

exports[`nr-fso icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  stroke: currentColor;
}

<svg
  className="emotion-0"
  viewBox="0 0 67 54"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    fill="none"
    fillRule="evenodd"
  >
    <path
      d="M16.609 35.907h48.175V2.077H16.61z"
      fill="var(--primary-background-color)"
    />
    <path
      d="M16.609 35.907h48.175V2.077H16.61z"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.785"
    />
    <path
      d="M20.976 8.328a.987.987 0 111.974 0 .987.987 0 01-1.974 0"
      fill="#0BAFBE"
    />
    <path
      d="M20.976 8.328a.987.987 0 111.974 0 .987.987 0 01-1.974 0z"
      stroke="#0BAFBE"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.785"
    />
    <path
      d="M25.676 8.351h14.829"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.785"
    />
    <path
      d="M21.098 12.954a.987.987 0 111.974 0 .987.987 0 01-1.974 0"
      fill="#0BAFBE"
    />
    <path
      d="M21.098 12.954a.987.987 0 111.974 0 .987.987 0 01-1.974 0z"
      stroke="#0BAFBE"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.785"
    />
    <path
      d="M25.746 12.978H40.37"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.785"
    />
    <path
      d="M2.073 51.401H50.25v-33.83H2.073z"
      fill="var(--primary-background-color)"
    />
    <path
      d="M2.073 51.401H50.25v-33.83H2.073zM33.044 36.331l7.611-8.68M22.617 32.637l5.838 4.24M10.931 40.66l6.95-7.595"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.785"
    />
    <path
      d="M17.495 30.742a2.91 2.91 0 115.822 0 2.91 2.91 0 01-5.822 0"
      fill="#0BAFBE"
    />
    <path
      d="M17.495 30.742a2.91 2.91 0 115.822 0 2.91 2.91 0 01-5.822 0z"
      stroke="#0BAFBE"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.785"
    />
    <path
      d="M28.455 38.7a2.909 2.909 0 014.538-2.413 2.91 2.91 0 11-4.538 2.413"
      fill="#0BAFBE"
    />
    <path
      d="M28.455 38.7a2.909 2.909 0 014.538-2.413 2.91 2.91 0 11-4.538 2.413z"
      stroke="#0BAFBE"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.785"
    />
    <path
      d="M6.056 42.806a2.91 2.91 0 115.821 0 2.91 2.91 0 01-5.821 0"
      fill="#0BAFBE"
    />
    <path
      d="M6.056 42.806a2.91 2.91 0 115.821 0 2.91 2.91 0 01-5.821 0z"
      stroke="#0BAFBE"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.785"
    />
    <path
      d="M39.75 25.541a2.91 2.91 0 115.822 0 2.91 2.91 0 01-5.821 0"
      fill="#0BAFBE"
    />
    <path
      d="M39.75 25.541a2.91 2.91 0 115.822 0 2.91 2.91 0 01-5.821 0z"
      stroke="#0BAFBE"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.785"
    />
  </g>
</svg>
`;

exports[`nr-tdp icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  stroke: currentColor;
}

<svg
  className="emotion-0"
  viewBox="0 0 54 53"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    fill="none"
    fillRule="evenodd"
  >
    <path
      d="M46.898 12.204h-5.102"
      stroke="#2C2C2C"
      strokeLinecap="square"
      strokeLinejoin="round"
      strokeWidth="2.337"
    />
    <path
      d="M51.954 11.716a2.351 2.351 0 10-4.703 0 2.351 2.351 0 004.703 0"
      fill="#0AB0BF"
    />
    <path
      d="M51.954 11.716a2.351 2.351 0 10-4.703 0 2.351 2.351 0 004.703 0z"
      stroke="#0AB0BF"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.337"
    />
    <path
      d="M47.251 41.667h-5.58"
      stroke="#2C2C2C"
      strokeLinecap="square"
      strokeLinejoin="round"
      strokeWidth="2.337"
    />
    <path
      d="M51.954 41.66a2.351 2.351 0 10-4.703 0 2.351 2.351 0 004.703 0"
      fill="#0AB0BF"
    />
    <path
      d="M51.954 41.66a2.351 2.351 0 10-4.703 0 2.351 2.351 0 004.703 0z"
      stroke="#0AB0BF"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.337"
    />
    <path
      d="M6.703 27.355h5.579"
      stroke="#2C2C2C"
      strokeLinecap="square"
      strokeLinejoin="round"
      strokeWidth="2.337"
    />
    <path
      d="M2 27.361a2.351 2.351 0 104.703 0 2.351 2.351 0 00-4.703 0"
      fill="#0AB0BF"
    />
    <path
      d="M2 27.361a2.351 2.351 0 104.703 0 2.351 2.351 0 00-4.703 0z"
      stroke="#0AB0BF"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.337"
    />
    <path
      d="M12.68 5.636v10.247c.022.101.057.197.057.305 0 1.965 5.624 4.821 14.437 4.821 8.813 0 14.438-2.856 14.438-4.821 0-.115.036-.22.06-.326V5.633M27.174 36.385c8.813 0 14.438-2.856 14.438-4.821 0-.115.036-.22.06-.326V21.009c-3.147 2.285-8.84 3.467-14.498 3.467-5.656 0-11.345-1.182-14.493-3.464v10.247c.021.1.056.197.056.305 0 1.965 5.624 4.821 14.437 4.821z"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.337"
    />
    <path
      d="M27.174 39.818c-5.656 0-11.345-1.182-14.493-3.462v8.314c0 .031-.003.06-.003.093 0 4.57 7.469 7.034 14.493 7.034 7.028 0 14.497-2.464 14.497-7.034h.003v-8.41c-3.146 2.282-8.84 3.465-14.497 3.465zM41.671 5.633c0 1.997-6.49 3.616-14.495 3.616-8.006 0-14.495-1.619-14.495-3.616 0-1.996 6.49-3.615 14.495-3.615 8.006 0 14.495 1.619 14.495 3.615z"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.337"
    />
  </g>
</svg>
`;
